# crypt

./: CMakeLists.txt  README.md  vcpkg.json
include/basic_math/: base_operations.h  basic_operations.h  gmp_utils.h
include/python/: convertions.h
src/: main.cpp
src/python/: convertions.cpp  module.cpp
